--- a/client/src/component/topBar/topbar.css
+++ b/client/src/component/topBar/topbar.css
@@ -131,6 +131,7 @@
     justify-content: space-between;
     width: 8rem;
     font-size: 16px;
+    display:none;
   }
   .listUser li{
     display: flex;
