--- a/client/src/component/product/product.css
+++ b/client/src/component/product/product.css
@@ -1,4 +1,4 @@
-.users{
+.products{
     background-color: var(--bgcolor2);
     margin: 28px auto auto auto;
     width: 95%;
@@ -7,6 +7,26 @@
     justify-content: space-evenly;
     flex-direction: column;
     padding-bottom: 20px;
+}
+.app .products{
+    background-color: var(--bgcolor2);
+}
+.app.dark .products{
+    background-color: var(--bgcolor);
+}
+.app .products .MuiPaper-root{
+    background-color: var(--bgcolor2)!important;
+	border:1px solid #c2c7dd !important;
+    margin: 28px auto auto auto !important;
+    width: 90% !important;
+    border-radius: 6px;
+}
+.app.dark .products .MuiPaper-root{
+    background-color: var(--bgcolor)!important;
+	border:1px solid black !important;
+    margin: 28px auto auto auto !important;
+    width: 90% !important;
+    border-radius: 6px;
 }
 .title{
     width: 90%;
@@ -35,6 +55,43 @@
     border-radius: 50%;
     display: inline-table;
     margin-right: 8%
+}
+.prod{
+    display: block;
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.filterProd{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 90%;
+    margin: 10px auto;
+}
+.filterProd span{
+    width: 100%;
+}
+.app.dark .filterProd h3{
+    color: white;
+    margin-right: 12px;
+}
+.app .filterProd h3 {
+    color: black;
+    margin-right: 12px;
+}
+.btnFilter{
+    background-color: transparent;
+    color: #6c7293;
+    border-radius: 10px;
+    padding: 6px;
+    margin-right: 12px;
+    cursor: pointer;
+    border: 1px solid;
+}
+.btnFilter.active{
+    border: 1px solid red;
 }
 .icons .pen{
     background-color: #e9f5fd;
@@ -297,3 +354,5 @@
         flex-direction: column;
     }
 }
+
+
