--- a/client/src/component/product/product.css
+++ b/client/src/component/product/product.css
@@ -69,6 +69,7 @@
     justify-content: flex-start;
     width: 90%;
     margin: 10px auto;
+   flex-wrap: wrap;
 }
 .filterProd span{
     width: 100%;
