--- a/client/src/component/order/order.css
+++ b/client/src/component/order/order.css
@@ -45,7 +45,6 @@
 }
 .status{
     display: flex;
-    justify-content: right;
     align-items: center;
 }
 .statusColor{
@@ -56,7 +55,10 @@
     margin-right: 8%
 }
 
-
+.imageProd{
+    width: 5rem;
+    height: 5rem;
+}
 
 .app .MuiTableHead-root .MuiTableCell-root,
 .app .MuiTableHead-root .MuiTableCell-root{
