--- a/client/src/page/home/home.css
+++ b/client/src/page/home/home.css
@@ -6,7 +6,13 @@
     display: flex;
     flex-direction: column;
 	  transition: 0.5s;
-	  width: 80vw;
+	  width: 78vw;
+}
+.app.dark .home .content{
+  background-color: rgb(0, 0, 0);
+}
+.app .home .content{
+  background-color: white;
 }
 .content.open{
   width: 100vw;
@@ -35,11 +41,12 @@
     to {width: 100vw;}
   }
   
-@media only screen and (min-width: 1600px) {
-  .content.close{
-	width: 100%;
-  }
-}
+  @media only screen and (max-width: 1200px) {
+    .content.close {
+      width: 75vw;
+      transition: width 0.8s;
+    }
+  }  
   @media only screen and (min-width: 1000px) {
   .home {
     display: flex;
