--- a/client/src/component/order/order.css
+++ b/client/src/component/order/order.css
@@ -56,8 +56,8 @@
 }
 
 .imageProd{
-    width: 5rem;
-    height: 5rem;
+    width: 5rem !important;
+    height: 5rem !important;
 }
 
 .app .MuiTableHead-root .MuiTableCell-root,
